# girlfriend-assistant

./: .env  .gitignore  README.md  bot.py  pyproject.toml  requirements.txt
girlfriend-assistant/plugins/remindify/: __init__.py  models.py
girlfriend-assistant/plugins/scheduler_notify/: __init__.py  config.py
girlfriend-assistant/plugins/shedular_notify/: __init__.py
girlfriend-assistant/plugins/weather/: __init__.py  config.py  models.py  notify.py  weather.py
