[project]
name = "girlfriend-assistant"
version = "0.1.0"
description = "girlfriend-assistant"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12" }
]
plugins = ["nonebot_plugin_apscheduler", "nonebot_plugin_tortoise_orm"]
plugin_dirs = ["girlfriend-assistant/plugins"]
builtin_plugins = ["echo"]
