[project]
name = "girlfriend-assistant"
version = "0.1.0"
description = "girlfriend-assistant"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "Walle-Q", module_name = "nonebot_adapter_walleq" },
    {name = "mirai2", module_name = "nonebot.adapters.mirai2"}
]
plugins = ["nonebot_plugin_tortoise_orm", "nonebot_plugin_apscheduler"]
plugin_dirs = ["girlfriend-assistant/plugins"]
builtin_plugins = ["echo"]
